--- a/html5/index.html
+++ b/html5/index.html
@@ -22,6 +22,6 @@
 </head>
 <body style="padding:0; margin: 0; background: #000;">
 <canvas id="gameCanvas" width="321" height="480"></canvas>
-<script src="cocos2d.js"></script>
+<script src="Cocos2d-html5-v2.2.2.min.js"></script>
 </body>
 </html>
